Added tree functionality

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Javascript tree with filter</title>
+    <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="jquery-1.6.4.min.js"></script>
     <script type="text/javascript" src="jquerymx-3.2.custom.min.js"></script>
     <script type="text/javascript" src="plugin.js"></script>
@@ -10,7 +11,7 @@
 <body>
 
 <h1>Tree test</h1>
-<ul>
+<ul id="tree">
     <li><input type="checkbox" value="1" id="item-1"/><label for="item-1">Alabama</label></li>
     <li><input type="checkbox" value="2" id="item-2"/><label for="item-2">Alaska</label></li>
     <li><input type="checkbox" value="3" id="item-3"/><label for="item-3">Arizona</label></li>
