Fixed typo in doc

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h2>Install</h2>
       <p>Supposed to build tree from nested ul>li tags with labels.
 
-<h4>Usage:</h4>  <pre>$('&lt;ul selecfot&gt;').tree();</pre>
+<h4>Usage:</h4>  <pre>$('ul.tree_or_another_selector').tree();</pre>
     
 
     
